--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Install vsce (VS Code Extension CLI)
+        run: npm install -g @vscode/vsce
+
       - name: Build extension
         run: npm run build-extension
 
